<resources>
    <string name="app_name">TinkoffSolutionCupFinal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_text">Button text</string>
    <string name="custom_button">Custom button</string>
    <string name="nextBtn">NEXT</string>
    <string name="simple_header">Simple header</string>
    <string name="backBtn">BACK</string>
    <string name="button_header">Header with button</string>
    <string name="item">Item</string>
    <string name="vertical_list">Vertical list</string>
    <string name="vertical_list_button">Vertical list with button</string>
    <string name="horizontal_list">Horizontal list</string>
    <string name="horizontal_button_list">Horizontal list with button</string>
</resources>